--- a/src/app/sign-contract/sign-contract.component.html
+++ b/src/app/sign-contract/sign-contract.component.html
@@ -1,1 +1,120 @@
-<p>sign-contract works!</p>
+
+    <!-- bradcam_area  -->
+    <div class="bradcam_area bradcam_bg_1">
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-12">
+                    <div class="bradcam_text">
+                        <h3>The Last step</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--/ bradcam_area  -->
+  
+    <div class="job_details_area">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8">
+                    <div class="job_details_header">
+                        <div class="single_jobs white-bg d-flex justify-content-between">
+                            <div class="jobs_left d-flex align-items-center">
+                                <div class="thumb">
+                                    <img src="img/svg_icon/1.svg" alt="">
+                                </div>
+                                <div class="jobs_conetent">
+                                    <a href="#"><h4>Description</h4></a>
+                                    <div class="links_locat d-flex align-items-center">
+                                        <div class="location">
+                                            <p> <i class="fa fa-map-marker"></i> California, USA</p>
+                                        </div>
+                                        <div class="location">
+                                            <p> <i class="fa fa-clock-o"></i> Part-time</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="jobs_right">
+                                <div class="apply_now">
+                                    <a class="heart_mark" href="#"> <i class="ti-heart"></i> </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="descript_wrap white-bg">
+                        <div class="single_wrap">
+                            <fieldset>
+                           <form>
+                               <p>
+                                
+  
+                                Experience Level: 
+                                <br>Entry  I need a Unity 3D developer to create a test build for iOS and Android with streaming unity videos - with this plugin I will provide
+                                                               
+                                <br>  https://assetstore.unity.com/packages/tools/video/youtube-video-player-youtube-api-29704<br>
+                                                               
+                                 <br> This is just for testing purposes - create a small menu of 2D and 360 videos - 4K<br>
+                                         U2 videos - 2D and 360<br>
+                                         Bieber Videos - 2D and 360<br>
+                                         Lady Gaga Videos - 2D and 360<br>
+                                                               
+                                  Don't need anything flash, just need to see if the plugin works for 4K and Verified Music videos
+                                                               
+                                 It's a fair fast test - just need a fair offer, I will provide the plugin once job is accepted
+                                                               
+                                                               I will need an apk build of this basic test for:
+                                                               
+                                                               android
+                                                               iOS
+                                                               PICO
+                                                               Oculus
+                               </p>
+                           </form>
+                        </fieldset>
+                    <div class="apply_job_form white-bg">
+                        <h4>Apply for the job</h4>
+                        <form action="#">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="input_field">
+                                        <input type="text" placeholder="Your name">
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="input_field">
+                                        <input type="text" placeholder="Email">
+                                    </div>
+                                </div>
+                                <div class="col-md-12">
+                                    <div class="input_field">
+                                        <input type="text" placeholder="Website/Portfolio link">
+                                    </div>
+                                </div>
+                                <div class="col-md-12">
+                                    <div class="input-group">
+                                        <div class="input-group-prepend">
+                                          <button type="button" id="inputGroupFileAddon03"><i class="fa fa-cloud-upload" aria-hidden="true"></i>
+                                          </button>
+                                        </div>
+                                        <div class="custom-file">
+                                          <input type="file" class="custom-file-input" id="inputGroupFile03" aria-describedby="inputGroupFileAddon03">
+                                          <label class="custom-file-label" for="inputGroupFile03">Upload CV</label>
+                                        </div>
+                                      </div>
+                                </div>
+                                <div class="col-md-12">
+                                    <div class="input_field">
+                                        <textarea name="#" id="" cols="30" rows="10" placeholder="Coverletter"></textarea>
+                                    </div>
+                                </div>
+                                <div class="col-md-12">
+                                    <div class="submit_btn">
+                                        <button class="boxed-btn3 w-100" type="submit">Apply Now</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+  
