--- a/src/app/add-orders/add-orders.component.html
+++ b/src/app/add-orders/add-orders.component.html
@@ -1,1 +1,75 @@
-<p>rahmaa yaa bouheleeyaa</p>
+<h1>Add Order</h1>
+<hr>
+<div class="container">
+<form>
+<div class="form-row">
+<div class="col-md-4 mb-3">
+<label for="validationServer013">Title</label>
+<input type="text" class="form-control is-valid" id="validationServer013" placeholder="What need to do ? "
+  required>
+<div class="valid-feedback">
+  Looks good!
+</div>
+</div>
+<div class="col-md-4 mb-3">
+<label for="validationServer023">Description</label>
+<textarea type="text" class="form-control is-valid" id="validationServer023" placeholder="describe the task in detail"
+ required></textarea>
+<div class="valid-feedback">
+  Looks good!
+</div>
+</div>
+<div class="col-md-4 mb-3">
+<label for="validationServerUsername33">Application Acceptance</label>
+<div class="input-group">
+ 
+    <select class="btn btn-danger dropdown-toggle" id="selectt">
+        <option value="" disabled selected>Choose your option</option>
+        <option value="1">3 days</option>
+        <option value="2">1 week</option>
+        <option value="3">2 weeks</option>
+        <option value="3">1 month</option>
+        <option value="3">termlessly</option>
+      </select>
+  
+ 
+</div>
+</div>
+</div>
+<div class="form-row">
+<div class="col-md-6 mb-3">
+<label for="validationServer033">Specialization</label>
+
+
+</div>
+<div class="col-md-3 mb-3">
+<label for="validationServer043">State</label>
+<input type="text" class="form-control is-invalid" id="validationServer043" placeholder="State"
+  required>
+<div class="invalid-feedback">
+  Please provide a valid state.
+</div>
+</div>
+<div class="col-md-3 mb-3">
+<label for="validationServer053">Zip</label>
+<input type="text" class="form-control is-invalid" id="validationServer053" placeholder="Zip"
+  required>
+<div class="invalid-feedback">
+  Please provide a valid zip.
+</div>
+</div>
+</div>
+<div class="form-group">
+<div class="custom-control custom-checkbox">
+<input type="checkbox" class="custom-control-input is-invalid" id="invalidCheck33" required>
+<label class="custom-control-label" for="invalidCheck33">Agree to terms and conditions</label>
+<div class="invalid-feedback">
+  You must agree before submitting.
+</div>
+</div>
+<div class="invalid-feedback">
+You must agree before submitting.
+</div>
+</div>
+<button class="btn btn-primary" type="submit">Submit form</button>
+</form></div>
