--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,60 @@
-<p>miaoooooooooooooooooooooooooo</p>
+<div class="miao">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
+        <a class="navbar-brand" href="#"> <i class="fas fa-briefcase"></i>       Freelancini</a>
+        
+        <div class="collapse navbar-collapse" id="navbarColor01">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+          </ul>
+          
+        </div>
+      </nav>
+    
+  <div class="container">
+      <div class="d-flex justify-content-end h-100">
+          <div class="card">
+              <div class="card-header">
+                  <h3  class="text-white font-italic" >Log in</h3>
+                  <div class="d-flex justify-content-end social_icon">
+                      <span><i class="fab fa-facebook"></i></span>
+                      <span><i class="fab fa-google-plus"></i></span>
+                      <span><i class="fab fa-instagram"></i></span>
+                      
+                  </div>
+              </div>
+              <div class="card-body">
+                  <form>
+                      <div class="input-group form-group">
+                          <div class="input-group-prepend">
+                              <span class="input-group-text"><i class="fas fa-user"></i></span>
+                          </div>
+                          <input type="text" class="form-control" placeholder="Nom d'utlisateur*">
+                          
+                      </div>
+                      <div class="input-group form-group">
+                          <div class="input-group-prepend">
+                              <span class="input-group-text"><i class="fas fa-key"></i></span>
+                          </div>
+                          <input type="password" class="form-control" placeholder="Mot De Passe *">
+                      </div>
+                      <div>
+                          <input type="radio" id="Freelancer" name="drone" value="Freelancer">
+                          <label for="Freelancer" class="text-white">Freelancer</label><br>
+                          <input type="radio" id="Customer" name="drone" value="Customer">
+                          <label for="Customer" class="text-white">Customer</label>
+                          
+                      </div>
+                      <div class="row align-items-center ">
+                          <p class="text-danger">Touts les champs sont exigés !</p>
+                      </div>
+                      <div class="form-group">						
+                          <button type="submit" class="btn btn-danger btn float-left logup_btn">Log in </button>
+                      </div>
+                  </form>
+              </div>
+          </div>
+      </div>
+  </div>
+  </div>
