--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -20,6 +20,10 @@
                 <a class="nav-link" routerLinkActive="actif" [routerLink]="['/workers']"
                   >workers</a>
               </li>
+              <li class="nav-item active">
+                <a class="nav-link" routerLinkActive="actif" [routerLink]="['/addOrders']"
+                  >addOrders</a>
+              </li>
         </ul>
         <ul class="navbar-nav">
             <li class="nav-item">
