--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,2 @@
-<<<<<<< HEAD
-<app-sign-contract></app-sign-contract>
-=======
-<app-login></app-login>
->>>>>>> dbdea7e28d6792cd9b47f41e7e3b3577589c37ed
+<app-menu></app-menu>
+<router-outlet></router-outlet>
