--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -27,11 +27,14 @@
         </ul>
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" routerLinkActive="actif" [routerLink]="['/login']" >Login</a>
+                <a class="nav-link" routerLinkActive="actif" [routerLink]="['/login']" >    
+                      <i class="fa fa-user" aria-hidden="true"></i>Login</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" routerLinkActive="actif" [routerLink]="['/singIn']" >Register</a>
+                <a class="nav-link" routerLinkActive="actif" [routerLink]="['/singIn']" >
+                    <i class="fa fa-sign-in" aria-hidden="true"></i> Register</a>
             </li>
         </ul>
     </div>
+
 </nav>
