--- a/src/app/add-orders/add-orders.component.html
+++ b/src/app/add-orders/add-orders.component.html
@@ -1,3 +1,4 @@
+<div class="bg">
 <h1>Add Order</h1>
 <hr>
 <div class="container">
@@ -23,7 +24,7 @@
 <label for="validationServerUsername33">Application Acceptance</label>
 <div class="input-group">
  
-    <select class="btn btn-danger dropdown-toggle" id="selectt">
+    <select class="btn btn-danger dropdown-toggle, selectt">
         <option value="" disabled selected>Choose your option</option>
         <option value="1">3 days</option>
         <option value="2">1 week</option>
@@ -39,33 +40,44 @@
 <div class="form-row">
 <div class="col-md-6 mb-3">
 <label for="validationServer033">Specialization</label>
-<select class="mdb-select md-form colorful-select dropdown-primary">
-  <option value="1">Option 1</option>
-  <option value="2">Option 2</option>
-  <option value="3">Option 3</option>
-  <option value="4">Option 4</option>
-  <option value="5">Option 5</option>
+<select class="btn btn-dark dropdown-toggle, selectt">
+  <option value="1">Web Development</option>
+  <option value="2">Design</option>
+  <option value="3">Programming</option>
+  <option value="4">Optimization (SEO)</option>
+  <option value="5">Polygraphy</option>
+  <option value="3">3D Graphics</option>
+  <option value="4">Ads / Marketing</option>
+  <option value="5">Architecture</option>
 </select>
-<label class="mdb-main-label">Blue select</label>
+
 
 </div>
-<div class="col-md-3 mb-3">
-<label for="validationServer043">State</label>
-<input type="text" class="form-control is-invalid" id="validationServer043" placeholder="State"
-  required>
-<div class="invalid-feedback">
-  Please provide a valid state.
+
+
 </div>
+<div>
+
 </div>
-<div class="col-md-3 mb-3">
-<label for="validationServer053">Zip</label>
-<input type="text" class="form-control is-invalid" id="validationServer053" placeholder="Zip"
-  required>
-<div class="invalid-feedback">
-  Please provide a valid zip.
+<div class="form-group mrgt15">
+  <label class="col-sm-3 control-label o-control-label" id="payment">Payment method :</label>
+  <div class="col-sm-9">
+      <div class="radio">
+          <label>
+              <input type="radio" name="fairplay" value="1" class="int">
+              Secure deal (with budget reservation) <a href="/" target="_blank"><i class="fa fa-question-circle"></i> </a>
+          </label>
+          <div class="help-block mrgt0 mrgb0, int" id="textt">Secure deal with money-back guarantee. You reserve the order budget and we guarantee to refund if the work is done poorly or not in time.</div>
+      </div>
+      <div class="radio">
+          <label>
+              <input type="radio" name="fairplay" value="0" class="int">
+              Direct payment to the performer wallet/account                                        </label>
+          <div class="help-block mrgt0 mrgb0, int" id="textt">Cooperation without site participation in the payment process. You arrange payment method with the freelancer by yourself and independently regulate all claims related to the work quality and timing.</div>
+      </div>
+  </div>
 </div>
-</div>
-</div>
+
 <div class="form-group">
 <div class="custom-control custom-checkbox">
 <input type="checkbox" class="custom-control-input is-invalid" id="invalidCheck33" required>
@@ -78,5 +90,9 @@
 You must agree before submitting.
 </div>
 </div>
-<button class="btn btn-primary" type="submit">Submit form</button>
+
 </form></div>
+<a href="#" class="boutton">Add Order</a>
+
+
+</div>
