--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -1,1 +1,53 @@
-<p>sign-in works!</p>
+<div class="miao">
+<div class="container">
+	<div class="d-flex justify-content-end h-100">
+		<div class="card">
+			<div class="card-header">
+				<h3  class="text-white font-italic" >Sign up </h3>
+				<div class="d-flex justify-content-end social_icon">
+					<span><i class="fab fa-facebook"></i></span>
+					<span><i class="fab fa-google-plus"></i></span>
+					<span><i class="fab fa-instagram"></i></span>	
+				</div>
+			</div>
+			<div class="card-body">
+				<form>
+					<div class="input-group form-group">
+						<div class="input-group-prepend">
+							<span class="input-group-text"><i class="fas fa-user"></i></span>
+						</div>
+						<input type="text" class="form-control" placeholder="username*">
+						
+					</div>
+					<div class="input-group form-group">
+						<div class="input-group-prepend">
+							<span class="input-group-text"><i class="fas fa-envelope"></i></span>
+						</div>
+						<input type="text" class="form-control" placeholder="e-mail adresse*">
+						
+					</div>
+					<div class="input-group form-group">
+						<div class="input-group-prepend">
+							<span class="input-group-text"><i class="fas fa-key"></i></span>
+						</div>
+						<input type="password" class="form-control" placeholder="password*">
+					</div>
+					<div>
+						<input type="radio" id="Freelancer" name="drone" value="Freelancer">
+						<label for="Freelancer" class="text-white"> Freelancer</label>
+						<input type="radio" id="Customer" name="drone" value="Customer">
+						<label for="Customer" class="text-white"> Customer</label>
+						
+					</div>
+					<div class="row align-items-center ">
+						<p class="text-danger">All fields are required(*).</p>
+					</div>
+					<div class="form-group">						
+						<button type="submit" class="btn btn-danger btn float-left logup_btn">Sign up </button>
+					</div>
+				</form>
+			</div>
+		</div>
+	</div>
+</div>
+</div>
