--- a/src/app/add-orders/add-orders.component.css
+++ b/src/app/add-orders/add-orders.component.css
@@ -20,15 +20,17 @@
     font-weight: bold;
     font-family : Arial, Helvetica, sans-serif;
     font-size:11px;
-    color:gray;
+    color:#e6f2e9;
 
 }
-
+.int{
+    margin-left:  140px;
+}
 .boutton{
     display:inline-block;
     width:200px;
     padding:10px;
-    background-color:#8258FA;
+    background-color:goldenrod;
     color:#fff;
     text-decoration: none;
     text-align: center;
