--- a/src/app/add-orders/add-orders.component.html
+++ b/src/app/add-orders/add-orders.component.html
@@ -2,7 +2,7 @@
 <h1>Add Order</h1>
 <hr>
 <div class="container">
-<form>
+<form >
 <div class="form-row">
 <div class="col-md-4 mb-3">
 <label for="validationServer013">Title</label>
@@ -24,7 +24,7 @@
 <label for="validationServerUsername33">Application Acceptance</label>
 <div class="input-group">
  
-    <select class="btn btn-danger dropdown-toggle, selectt">
+    <select class="btn btn-dark dropdown-toggle, selectt">
         <option value="" disabled selected>Choose your option</option>
         <option value="1">3 days</option>
         <option value="2">1 week</option>
