--- a/src/app/add-orders/add-orders.component.html
+++ b/src/app/add-orders/add-orders.component.html
@@ -8,17 +8,13 @@
 <label for="validationServer013">Title</label>
 <input type="text" class="form-control is-valid" id="validationServer013" placeholder="What need to do ? "
   required>
-<div class="valid-feedback">
-  Looks good!
-</div>
+
 </div>
 <div class="col-md-4 mb-3">
 <label for="validationServer023">Description</label>
 <textarea type="text" class="form-control is-valid" id="validationServer023" placeholder="describe the task in detail"
  required></textarea>
-<div class="valid-feedback">
-  Looks good!
-</div>
+
 </div>
 <div class="col-md-4 mb-3">
 <label for="validationServerUsername33">Application Acceptance</label>
@@ -78,6 +74,31 @@
   </div>
 </div>
 
+<div class="form-row">
+  <div class="col-md-4 mb-3">
+  <label for="validationServer013">Account Type</label><br>
+  <button class="btn btn-outline-dark">Private person</button>
+  <button class="btn btn-outline-dark">Company</button>
+  </div>
+</div>
+
+<div>
+<div class="form-row">
+  <div class="col-md-4 mb-3">
+  <label for="validationServer013">Email</label>
+  <input type="text" class="form-control is-valid" id="validationServer013" placeholder="Email"
+    required>
+</div>
+</div>
+
+<div class="form-row">
+  <div class="col-md-4 mb-3">
+  <label for="validationServer013">Name</label>
+  <input type="text" class="form-control is-valid" id="validationServer013" placeholder="Your name"
+    required>
+</div>
+</div>
+</div>
 <div class="form-group">
 <div class="custom-control custom-checkbox">
 <input type="checkbox" class="custom-control-input is-invalid" id="invalidCheck33" required>
@@ -95,4 +116,10 @@ You must agree before submitting.
 <a href="#" class="boutton">Add Order</a>
 
 
+
+
 </div>
+
+
+
+
