--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,4 +1,31 @@
+<!--<section class="header">
+  <div class="overlay">
 
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+      <a class="navbar-brand" href="#">FreeLancini</a>
+
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="#" id="link">About US <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" id="link" href="#">Job Orders</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" id="link" href="#">Workers</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" id="link" href="#">Contact</a>
+          </li>
+
+        </ul>
+      </div>
+
+    </nav>
+
+  </div>
+</section>-->
   <section>
     <div class="row padding" id="l">
       <div class="col-md-12 col-lg-6">
