--- a/src/app/add-orders/add-orders.component.css
+++ b/src/app/add-orders/add-orders.component.css
@@ -12,10 +12,14 @@
     height:62px;
 }
 #payment{
-   margin-top: 20px;;
-
-    
+   margin-top: 20px;;  
 }
+
+#title{
+  width:370px;
+}
+
+
 #textt{
     font-weight: bold;
     font-family : Arial, Helvetica, sans-serif;
@@ -30,7 +34,7 @@
     display:inline-block;
     width:200px;
     padding:10px;
-    background-color:goldenrod;
+    background-color:#3AC943;
     color:#fff;
     text-decoration: none;
     text-align: center;
@@ -58,3 +62,9 @@
   .boutton:hover:before{
     width: 100%;
   }
+
+  input.ng-valid{ border-left: 2px solid green;}
+  input.ng-invalid{ border-left: 2px solid red;}
+
+  textarea.ng-valid{border-left: 2px solid green;}
+  textarea.ng-invalid{ border-left: 2px solid red;}
