--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -38,4 +38,12 @@
     border-radius: 3px;
     opacity: 1.5;
   }
-  
+  .first{
+    position:absolute;
+}
+.second{
+ position: relative;
+   top:5px;
+   width: 10px;
+   font-size: 14px;
+}
