--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,8 +1,7 @@
 <nav class="navbar navbar-expand-md navbar-light bg-light">
-    <a [routerLink]="['/homePage']" class="navbar-brand"
-    ><img src="../assets/bird.png" width="60px" height="55px"
-  /></a> 
-  
+    <a class="first" [routerLink]="['/homePage']" class="navbar-brand"
+    ><img src="../assets/bird.png" width="60px" height="40px"/>  <p class="second">Freelancini</p>
+  </a> 
      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
     </button>
