--- a/src/app/joborders/joborders.component.html
+++ b/src/app/joborders/joborders.component.html
@@ -1,6 +1,7 @@
 <!--<div *ngFor="let t of hehe">
 {{t.nom}}
 </div>-->
+<section>
 <div class="search-container" style="margin-top: 10px;">
     <input type="text" id="search-bar" placeholder="Find an order">
     <a href="#" class="search-icon">
@@ -20,3 +21,4 @@
     </div></div>
     
 </div></div>
+</section>
