--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -23,6 +23,10 @@
                 <a class="nav-link" routerLinkActive="actif" [routerLink]="['/addOrders']"
                   >addOrders</a>
               </li>
+              <li class="nav-item active">
+                <a class="nav-link" routerLinkActive="actif" [routerLink]="['/signContract']"
+                  >signContract</a>
+              </li>
         </ul>
         <ul class="navbar-nav">
             <li class="nav-item">
