--- a/src/app/add-orders/add-orders.component.html
+++ b/src/app/add-orders/add-orders.component.html
@@ -2,7 +2,7 @@
 <h1>Add Order</h1>
 <hr>
 <div class="container">
-<form #f="ngForm" (ngubmit)="showSuccess(f)">
+<form #f="ngForm" (ngSubmit)="showSuccess(f)">
 <div class="form-row">
 <div class="col-md-4 mb-3">
 <label for="title">Title</label>
@@ -22,11 +22,11 @@
  
     <select class="btn btn-dark dropdown-toggle, selectt" name="date" [(ngModel)]="date">
         <option value="" disabled selected>Choose your option</option>
-        <option value="1">3 days</option>
-        <option value="2">1 week</option>
-        <option value="3">2 weeks</option>
-        <option value="3">1 month</option>
-        <option value="3">termlessly</option>
+        <option value="3 days">3 days</option>
+        <option value="1 week">1 week</option>
+        <option value="2 weeks">2 weeks</option>
+        <option value="1 month">1 month</option>
+        <option value="termlessly">termlessly</option>
       </select>
   
  
@@ -82,7 +82,14 @@
   <button class="btn btn-outline-dark">Company</button>
   </div>
 </div>
-
+<div class="form-row">
+  <div class="col-md-4 mb-3">
+  <label for="mail">Price</label>
+  <input type="text" class="form-control" id="price" placeholder="price" name="price" [(ngModel)]="price"
+    required #prc="ngModel">
+    <div *ngIf="prc.invalid && prc.dirty" class="alert alert-danger">Price invalid</div>
+</div>
+</div>
 <div>
 <div class="form-row">
   <div class="col-md-4 mb-3">
@@ -114,9 +121,9 @@
 You must agree before submitting.
 </div>
 </div>
-<button type="submit" [disabled]="f.invalid" class="boutton">Add Order</button>
+<button type="submit"  class="boutton">Add Order</button>
 </form></div>
-
+<!-- [disabled]="f.invalid"-->
 
 
 
