--- a/src/app/sign-contract/sign-contract.component.css
+++ b/src/app/sign-contract/sign-contract.component.css
@@ -1,110 +1,4 @@
-.bradcam_area {
-    background-size: cover;
-    background-position: center;
-    padding: 182px 0 102px 0;
-    background-repeat: no-repeat;
-    position: relative;
-    z-index: 0;
-    background-size: cover;
-  }
-  
-  @media (min-width: 768px) and (max-width: 991px) {
-    /* line 4, ../../Arafath/CL/December/235. Job board/HTML/scss/_bradcam.scss */
-    .bradcam_area {
-      padding: 120px 0;
-    }
-  }
-  
-  @media (max-width: 767px) {
-    /* line 4, ../../Arafath/CL/December/235. Job board/HTML/scss/_bradcam.scss */
-    .bradcam_area {
-      padding: 150px 0 60px 0;
-    }
-  }
-  
-  /* line 19, ../../Arafath/CL/December/235. Job board/HTML/scss/_bradcam.scss */
-  .bradcam_area h3 {
-    font-size: 56px;
-    color: #fff;
-    font-weight: 400;
-    margin-bottom: 0;
-    text-transform: capitalize;
-  }
-  
-  @media (max-width: 767px) {
-    /* line 19, ../../Arafath/CL/December/235. Job board/HTML/scss/_bradcam.scss */
-    .bradcam_area h3 {
-      font-size: 30px;
-    }
-  }
-  
-  /* line 29, ../../Arafath/CL/December/235. Job board/HTML/scss/_bradcam.scss */
-  .bradcam_area p {
-    font-size: 18px;
-    color: #fff;
-    font-weight: 400;
-    text-transform: capitalize;
-  }
-  
-  /* line 34, ../../Arafath/CL/December/235. Job board/HTML/scss/_bradcam.scss */
-  .bradcam_area p a {
-    color: #fff;
-  }
-  
-  /* line 36, ../../Arafath/CL/December/235. Job board/HTML/scss/_bradcam.scss */
-  .bradcam_area p a:hover {
-    color: #fff;
-  }
-  
-  /* line 42, ../../Arafath/CL/December/235. Job board/HTML/scss/_bradcam.scss */
-  .bradcam_area .icon {
-    background: #FF5748;
-    width: 136px;
-    height: 136px;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    border-radius: 50%;
-    text-align: center;
-    line-height: 136px;
-    margin: auto;
-  }
-  
-  /* line 50, ../../Arafath/CL/December/235. Job board/HTML/scss/_bradcam.scss */
-  .bradcam_area .icon i {
-    color: #fff;
-    font-size: 68px;
-  }
-  
-  /* line 56, ../../Arafath/CL/December/235. Job board/HTML/scss/_bradcam.scss */
-  .bradcam_area h4 {
-    font-size: 70px;
-    font-weight: 300;
-    color: #fff;
-    margin: 10px 0;
-  }
-  
-  @media (max-width: 767px) {
-    /* line 56, ../../Arafath/CL/December/235. Job board/HTML/scss/_bradcam.scss */
-    .bradcam_area h4 {
-      font-size: 40px;
-    }
-  }
-  
-  @media (min-width: 768px) and (max-width: 991px) {
-    /* line 56, ../../Arafath/CL/December/235. Job board/HTML/scss/_bradcam.scss */
-    .bradcam_area h4 {
-      font-size: 40px;
-    }
-  }
-  
-  /* line 68, ../../Arafath/CL/December/235. Job board/HTML/scss/_bradcam.scss */
-  .bradcam_area p {
-    color: #fff;
-    font-size: 16px;
-    font-weight: 400;
-    font-family: "Roboto", sans-serif;
-  }
- 
+
   .container {
     width: 100%;
     padding-right: 15px;
@@ -159,3 +53,359 @@
     padding-top: 100px;
     padding-bottom: 100px;
   }  
+
+  .job_details_area .single_jobs .jobs_right .date p {
+    margin-bottom: 0;
+    font-size: 14px;
+    font-style: italic;
+    color: #7A838B;
+  }
+  
+  /* line 110, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_details.scss */
+  .job_details_area .descript_wrap {
+    padding: 40px;
+  }
+  
+  /* line 112, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_details.scss */
+  .job_details_area .descript_wrap .single_wrap {
+    margin-bottom: 30px;
+  }
+  
+  /* line 114, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_details.scss */
+  .job_details_area .descript_wrap .single_wrap:last-child {
+    margin-bottom: 0;
+  }
+  
+  /* line 117, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_details.scss */
+  .job_details_area .descript_wrap .single_wrap h4 {
+    font-size: 20px;
+    font-weight: 500;
+    color: #001D38;
+    margin-bottom: 25px;
+  }
+  
+  /* line 123, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_details.scss */
+  .job_details_area .descript_wrap .single_wrap p {
+    color: #7A838B;
+    font-size: 16px;
+    line-height: 28px;
+    font-weight: 400;
+  }
+  
+  /* line 130, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_details.scss */
+  .job_details_area .descript_wrap .single_wrap ul li {
+    font-size: 16px;
+    line-height: 32px;
+    color: #7A838B;
+    font-weight: 400;
+    position: relative;
+    padding-left: 25px;
+  }
+  
+  /* line 137, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_details.scss */
+  .job_details_area .descript_wrap .single_wrap ul li::before {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 7px;
+    height: 7px;
+    background: #7A838B;
+    content: '';
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+    top: 12px;
+  }
+  
+  .job_details_area .apply_job_form {
+    margin-top: 30px;
+    padding: 40px;
+  }
+  
+  @media (max-width: 767px) {
+    /* line 152, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_details.scss */
+    .job_details_area .apply_job_form {
+      padding: 30px;
+    }
+  }
+  
+  /* line 158, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_details.scss */
+  .job_details_area .apply_job_form h4 {
+    font-size: 24px;
+    font-weight: 500;
+    margin-bottom: 30px;
+  }
+  
+  /* line 164, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_details.scss */
+  .job_details_area .apply_job_form .input_field input, .job_details_area .apply_job_form .input_field textarea {
+    height: 60px;
+    border: 1px solid #E8E8E8;
+    width: 100%;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    padding-left: 20px;
+    margin-bottom: 20px;
+  }
+  
+  /* line 171, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_details.scss */
+  .job_details_area .apply_job_form .input_field input::placeholder, .job_details_area .apply_job_form .input_field textarea::placeholder {
+    color: #7A838B;
+    font-size: 16px;
+  }
+  
+  /* line 175, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_details.scss */
+  .job_details_area .apply_job_form .input_field input:focus, .job_details_area .apply_job_form .input_field textarea:focus {
+    outline: none;
+  }
+  
+  /* line 179, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_details.scss */
+  .job_details_area .apply_job_form .input_field textarea {
+    height: 188px;
+    padding: 20px;
+  }
+  
+  /* line 184, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_details.scss */
+  .job_details_area .apply_job_form .input_field.file_up input {
+    position: relative;
+  }
+  
+  /* line 186, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_details.scss */
+  .job_details_area .apply_job_form .input_field.file_up input:before {
+    position: absolute;
+    left: 0;
+    top: 0;
+    content: 'Upload CV';
+  }
+  
+  /* line 195, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_details.scss */
+  .job_details_area .apply_job_form .input-group {
+    width: 100%;
+    height: 60px;
+    border-radius: 5px !important;
+    margin-bottom: 20px;
+    border: 1px solid #ddd;
+  }
+  
+  /* line 201, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_details.scss */
+  .job_details_area .apply_job_form .input-group button {
+    background: transparent;
+    border: none;
+    font-size: 16px;
+    color: #7A838B;
+    padding-left: 20px;
+    margin-right: 5px;
+  }
+  
+  /* line 209, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_details.scss */
+  .job_details_area .apply_job_form .input-group .custom-file {
+    margin-bottom: 0;
+    height: 60px;
+    border: none;
+  }
+  
+  /* line 214, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_details.scss */
+  .job_details_area .apply_job_form .input-group .custom-file-label {
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 1;
+    height: 100%;
+    padding: 0;
+    line-height: 60px;
+    color: #7A838B;
+    background-color: transparent;
+    border-radius: 0;
+    border: none;
+  }
+  
+  /* line 228, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_details.scss */
+  .job_details_area .apply_job_form .input-group .custom-file-input {
+    height: 100%;
+  }
+  
+  /* line 233, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_details.scss */
+  .job_details_area .job_sumary {
+    background: #fff;
+  }
+  
+  @media (max-width: 767px) {
+    /* line 233, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_details.scss */
+    .job_details_area .job_sumary {
+      margin-top: 30px;
+    }
+  }
+  
+  @media (min-width: 768px) and (max-width: 991px) {
+    /* line 233, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_details.scss */
+    .job_details_area .job_sumary {
+      margin-top: 30px;
+    }
+  }
+  
+  /* line 241, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_details.scss */
+  .job_details_area .job_sumary .summery_header {
+    border-bottom: 1px solid #EAEAEA;
+    padding: 40px;
+  }
+  
+  @media (max-width: 767px) {
+    /* line 241, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_details.scss */
+    .job_details_area .job_sumary .summery_header {
+      padding: 30px;
+    }
+  }
+  
+  /* line 247, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_details.scss */
+  .job_details_area .job_sumary .summery_header h3 {
+    font-size: 24px;
+    color: #001D38;
+    font-weight: 400;
+  }
+  
+  /* line 253, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_details.scss */
+  .job_details_area .job_sumary .job_content {
+    padding: 40px;
+  }
+  
+  @media (max-width: 767px) {
+    /* line 253, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_details.scss */
+    .job_details_area .job_sumary .job_content {
+      padding: 30px;
+    }
+  }
+  
+  /* line 259, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_details.scss */
+  .job_details_area .job_sumary .job_content ul li {
+    font-size: 16px;
+    font-weight: 400;
+    color: #AAB1B7;
+    line-height: 38px;
+    padding-left: 18px;
+    position: relative;
+  }
+  
+  /* line 266, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_details.scss */
+  .job_details_area .job_sumary .job_content ul li::before {
+    position: absolute;
+    width: 8px;
+    height: 8px;
+    border: 1px solid #AAB1B7;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+    left: 0;
+    content: '';
+    top: 16px;
+  }
+  
+  /* line 277, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_details.scss */
+  .job_details_area .job_sumary .job_content ul li span {
+    color: #001D38;
+  }
+  
+  /* line 284, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_details.scss */
+  .job_details_area .share_wrap {
+    background: #fff;
+    margin: 30px 0;
+    padding: 20px;
+  }
+  
+  /* line 288, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_details.scss */
+  .job_details_area .share_wrap span {
+    font-size: 16px;
+    font-weight: 500;
+    color: #001D38;
+    margin-right: 20px;
+  }
+  
+  /* line 295, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_details.scss */
+  .job_details_area .share_wrap ul li {
+    display: inline-block;
+    margin-right: 10px;
+  }
+  
+  /* line 298, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_details.scss */
+  .job_details_area .share_wrap ul li a {
+    font-size: 16px;
+    color: #D5D5D5;
+  }
+  
+  /* line 301, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_details.scss */
+  .job_details_area .share_wrap ul li a:hover {
+    color: #00D363;
+  }
+  
+  /* line 308, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_details.scss */
+  .job_details_area .job_location_wrap {
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    overflow: hidden;
+  }
+  h1 {
+    font-size: 36px;
+  }
+  
+  /* line 97, ../../Arafath/CL/December/235. Job board/HTML/scss/_elements.scss */
+  h2 {
+    font-size: 30px;
+  }
+  
+  /* line 101, ../../Arafath/CL/December/235. Job board/HTML/scss/_elements.scss */
+  h3 {
+    font-size: 24px;
+  }
+  
+  /* line 105, ../../Arafath/CL/December/235. Job board/HTML/scss/_elements.scss */
+  h4 {
+    font-size: 18px;
+  }
+  
+  /* line 109, ../../Arafath/CL/December/235. Job board/HTML/scss/_elements.scss */
+  h5 {
+    font-size: 16px;
+  }
+  
+  /* line 113, ../../Arafath/CL/December/235. Job board/HTML/scss/_elements.scss */
+  h6 {
+    font-size: 14px;
+  }
+  .boxed-btn3 {
+    /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#F91842+0,fd8e5e+100 */
+    background: #00D363;
+    color: #fff;
+    display: inline-block;
+    padding: 13px 29px 13px 29px;
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    border: 0;
+    border: 1px solid transparent;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    text-align: center;
+    color: #fff !important;
+    text-transform: capitalize;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s;
+    cursor: pointer;
+  }
+  
+  /* line 43, ../../Arafath/CL/December/235. Job board/HTML/scss/_btn.scss */
+  .boxed-btn3:hover {
+    color: #00D363 !important;
+    border: 1px solid #00D363;
+    background: transparent;
+  }
+  
+  /* line 48, ../../Arafath/CL/December/235. Job board/HTML/scss/_btn.scss */
+  .boxed-btn3:focus {
+    outline: none;
+  }
+  
+  
