--- a/src/app/joborders/joborders.component.html
+++ b/src/app/joborders/joborders.component.html
@@ -1,8 +1,5 @@
-<!--<div *ngFor="let t of hehe">
-{{t.nom}}
-</div>-->
 <section>
-<div class="search-container" style="margin-top: 10px;">
+<div class="search-container" style="margin-top: 10px; padding: 10px;">
     <input type="text" id="search-bar" placeholder="Find an order">
     <a href="#" class="search-icon">
         <i class="fa fa-search"></i>
@@ -11,13 +8,32 @@
 <div class="wrapper" style="margin-top: 20px;">
 <div class="box">
     <div>
-    <div style="border: 1px solid black;margin: 20px;width:220px;padding: 20px;">
-        <h3>For only pro</h3>
-        <p-multiSelect  [options]="cities" [(ngModel)]="selectedCities" [filter]="true" filterBy="label,value.name"></p-multiSelect>
-    
-    </div></div>
-    <div><div style="border: 1px solid black;margin: 20px;width:800px;padding: 20px;">
-        <h3 class="text-success">Found 910 orders</h3>    
+    <div class="text-center" style="border: 2px solid rgb(215, 227, 248);margin: 20px;width:220px;">
+        <h3 style="background-color: rgb(215, 227, 248);padding: 10px;">For only pro</h3>
+        <div style="padding: 10px;">
+            <p-dropdown  [options]="cities" [(ngModel)]="selectedCity" placeholder="Specializations" [filter]="true" filterBy="label,value.name"></p-dropdown>
+            <hr class="hr-light"> 
+            <p-dropdown  [options]="cities" [(ngModel)]="selectedCity" placeholder="Price" [filter]="true" filterBy="label,value.name"></p-dropdown>
+        </div>
+        </div></div>
+    <!--border: 2px dotted rgb(215, 227, 248);-->
+    <div><div style=" margin: 20px;width:720px;padding: 20px;border-radius:50px;">
+        <div style="display:flex">        
+            <p class="text-success flex-item bd">All Tasks And Jobs</p>  
+            <p style="padding-left: 10px; font-size: 20px;" class="flex-item"><a style="color: darkgrey;" [routerLink]="['/addOrders']"
+                >add Orders</a></p>  
+        </div>
+        <hr class="hr-light">
+        <h4 class="flex-item" style="margin-left: 25px;">Found 2 orders</h4>  
+        <div *ngFor="let t of hehe" style="border: 1px solid rgb(215, 227, 248);margin: 20px;padding: 20px;border-radius: 20px;"> 
+            <h5 class="text-primary"> {{t.title}} </h5>
+            <p style="margin-top: 20px;"> <span class="bg-success text-white" style="border-radius: 4px; padding: 5px; color: black;" >{{t.price}} DT </span></p>
+            <p>{{ t.des }}</p>
+            <strong style="font-size: 15px;padding: 10px;border-right: 2px solid rgb(215, 227, 248);">
+                <i style="font-size: 20px;" class=" fas fa-calendar-alt"></i> {{t.date}} </strong>
+            <strong style="font-size: 15px;padding: 10px;"><i style="font-size: 20px;" class=" fas fa-calendar-alt"></i> {{t.date}} </strong>
+                <button class="btn btn-default text-primary" style="float: right;border: 1px solid gray;">Open</button>
+        </div>   
     </div></div>
     
 </div></div>
