--- a/src/app/joborders/joborders.component.html
+++ b/src/app/joborders/joborders.component.html
@@ -48,7 +48,7 @@
                     <strong style="font-size: 15px;padding: 10px;border-right: 2px solid rgb(215, 227, 248);">
                          <i style="font-size: 20px;" class=" fas fa-calendar-alt"></i> {{t.date}} </strong>
                     <strong style="font-size: 15px;padding: 10px;"><i style="font-size: 20px;" class=" fas fa-calendar-alt"></i> {{t.date}} </strong>
-                    <button class="btn btn-default text-primary" style="float: right;border: 1px solid gray;">Open</button>
+                    <button class="btn btn-default text-primary" style="float: right;border: 1px solid gray;" (click)="onClick(t)">Open</button>
                   </td>
                 </tr>
             </ng-template> 
