--- a/src/app/joborders/joborders.component.html
+++ b/src/app/joborders/joborders.component.html
@@ -36,7 +36,7 @@
             </div>
         <hr class="hr-light">
         <h4 class="flex-item" style="margin-left: 25px;">Found {{hehe.length}} orders</h4>  
-        <p-table #tt [columns]="cols" [value]="hehe" [globalFilterFields]="['title','domaine.dmn','price']" [paginator]="true" [rows]="10">
+        <p-table #tt [columns]="cols" [value]="hehe" [globalFilterFields]="['title','domaine.dmn','price']" [paginator]="true" [rows]="2"  [totalRecords]="120" [rowsPerPageOptions]="[5,10,25,50,100]">
             <ng-template pTemplate="body" let-t let-expanded="expanded" let-columns="columns"  style="border: 1px solid rgb(215, 227, 248);margin: 20px;padding: 20px;border-radius: 20px;">
                 <tr>
                   <td style="margin: 20px;padding: 20px;">
@@ -45,9 +45,13 @@
                          <span class="bg-success text-white" style="border-radius: 4px; padding: 5px; color: black;" >{{t.price}} DT </span>
                     </p>
                     <p>{{ t.des }}</p>
-                    <strong style="font-size: 15px;padding: 10px;border-right: 2px solid rgb(215, 227, 248);">
-                         <i style="font-size: 20px;" class=" fas fa-calendar-alt"></i> {{t.date}} </strong>
-                    <strong style="font-size: 15px;padding: 10px;"><i style="font-size: 20px;" class=" fas fa-calendar-alt"></i> {{t.date}} </strong>
+                    <strong style="font-size: 15px;padding: 10px;border-right: 2px solid rgb(215, 227, 248);color:gray;">
+                        <i style="font-size: 20px;" class="fas fa-briefcase"></i>One-time order  
+                    </strong>
+                    <strong style="font-size: 15px;padding: 10px;border-right: 2px solid rgb(215, 227, 248);color:gray;">
+                        <i style="font-size: 20px;" class="far fa-clock"></i>Yesterday  
+                    </strong>
+                    <strong style="font-size: 15px;padding: 10px;color:gray;"><i style="font-size: 20px;" class=" fas fa-calendar-alt"></i> {{t.date}} </strong>
                     <button class="btn btn-default text-primary" style="float: right;border: 1px solid gray;" (click)="onClick(t)">Open</button>
                   </td>
                 </tr>
